--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
+  padding-top: 60px;
   margin: 0;
-  background: #4d4d4d;
+  background: #FFFFFF;
 }
 
 .slide-in-left-enter {
