--- a/frontend/src/places/components/PlaceItem.css
+++ b/frontend/src/places/components/PlaceItem.css
@@ -13,14 +13,16 @@
 
 .place-item__image {
   width: 100%;
-  height: 12.5rem;
+  height: 5rem;
   margin-right: 1.5rem;
+  max-height: 5rem;
 }
 
 .place-item__image img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 5rem;
+  max-height: 5rem;
+  object-fit: none;
 }
 
 .place-item__info h2,
