--- a/frontend/src/shared/components/Navigation/MainNavigation.css
+++ b/frontend/src/shared/components/Navigation/MainNavigation.css
@@ -1,3 +1,6 @@
+/* Bolder ver of Roboto specifically for the site name */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .main-navigation__menu-btn {
   width: 3rem;
   height: 3rem;
@@ -18,12 +21,13 @@
 }
 
 .main-navigation__title {
-  color: white;
+  color: #292929;
 }
 
 .main-navigation__title a {
+  font-family: 'Roboto';
   text-decoration: none;
-  color: white;
+  color: #292929;
 }
 
 .main-navigation__header-nav {
