--- a/frontend/src/user/components/UserItem.css
+++ b/frontend/src/user/components/UserItem.css
@@ -10,14 +10,15 @@
   width: 100%;
   height: 100%;
   text-decoration: none;
-  padding: 1rem;
+  padding: 0rem;
   color: white;
-  background: #292929;
+  background: #FFFFFF;
 }
 
 .user-item a:hover,
 .user-item a:active {
-  background: #ffd900;
+  background: #202434;
+  transition: 0.3s;
 }
 
 .user-item__content {
@@ -25,8 +26,8 @@
 }
 
 .user-item__image {
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 5rem;
   margin-right: 1rem;
 }
 
@@ -34,14 +35,19 @@
   font-size: 1.5rem;
   margin: 0 0 0.5rem 0;
   font-weight: normal;
-  color: #ffd900;
+  color: #292929;
+}
+
+.user-item__info:hover h2 {
+  font-weight: bold;
+  color: #FFFFFF
 }
 
 .user-item:hover h2,
 .user-item:active h2,
 .user-item:hover h3,
 .user-item:active h3 {
-  color: #292929;
+  color: #FFFFFF;
 }
 
 .user-item__info h3 {
