Updated banner and text colors; replaced 'place' mentions with 'question'
- Updated nav bar and side bar with a darker blue and changed text to white
- Updated map modal so banner now matches nav bar color
- Replaced mentions of 'place' with 'question' in NewPlace.js and places-controllers.js

--- a/frontend/src/places/pages/PlaceForm.css
+++ b/frontend/src/places/pages/PlaceForm.css
@@ -2,10 +2,25 @@
   position: relative;
   list-style: none;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 3rem;
   width: 90%;
   max-width: 40rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 6px;
   background: #F2F7FF;
 }
+
+#firstName{
+  width: 50%;
+  display: inline-block;
+}
+
+#lastName {
+  width: 50%;
+  display: inline-block;
+}
+
+#contact {
+  width: 50%;
+} 
+
