--- a/frontend/src/shared/components/Navigation/NavLinks.css
+++ b/frontend/src/shared/components/Navigation/NavLinks.css
@@ -17,32 +17,34 @@
 
 .nav-links a {
   border: 1px solid transparent;
-  color: #292929;
+  color: white;
   text-decoration: none;
   padding: 0.5rem;
 }
 
 .nav-links a:hover,
 .nav-links a.hover {
-  color: #292929;
-  border-bottom: 3px solid #292929;
+  color: white;
+  border-bottom: 3px solid white;
+  transition: all ease-in-out 0.2s;
 }
 
 .nav-links a:active,
 .nav-links a.active {
   /* background: #f8df00; */
   /* border-color: #292929; */
-  color: #292929;
+  color: white;
   font-weight: bold;
 }
 
 .nav-links button {
   cursor: pointer;
-  border: 1px solid #292929;
-  color: #292929;
+  border: 1px solid white;
+  color: white;
   background: transparent;
   padding: 0.5rem;
   font: inherit;
+  border-radius: 10px;
 }
 
 .nav-links button:focus {
@@ -51,8 +53,11 @@
 
 .nav-links button:hover,
 .nav-links button:active {
-  background: #292929;
+  background: #fcc088;
   color: white;
+  transition: all ease-in-out 0.2s;
+  border-radius: 10px;
+  font-weight: bold;
 }
 
 @media (min-width: 768px) {
@@ -65,7 +70,7 @@
   }
 
   .nav-links a {
-    color: #292929;
+    color: white;
     text-decoration: none;
   }
 
