--- a/frontend/src/questions/components/QuestionItem.css
+++ b/frontend/src/questions/components/QuestionItem.css
@@ -1,53 +1,53 @@
-.place-item {
+.question-item {
   margin: 1rem 0;
 }
 
-.place-item__content {
+.question-item__content {
   padding: 0;
 }
 
-.place-item__info {
+.question-item__info {
   padding: 1rem;
   text-align: center;
 }
 
-.place-item__image {
+.question-item__image {
   width: 100%;
   height: 5rem;
   margin-right: 1.5rem;
   max-height: 5rem;
 }
 
-.place-item__image img {
+.question-item__image img {
   width: 100%;
   height: 5rem;
   max-height: 5rem;
   object-fit: none;
 }
 
-.place-item__info h2,
-.place-item__info h3,
-.place-item__info p {
+.question-item__info h2,
+.question-item__info h3,
+.question-item__info p {
   margin: 0 0 0.5rem 0;
   text-align: left;
 }
 
-.place-item__actions {
+.question-item__actions {
   padding: 1rem;
   text-align: center;
   border-top: 1px solid #ccc;
 }
 
-.place-item__modal-content {
+.question-item__modal-content {
   padding: 0;
 }
 
-.place-item__modal-actions {
+.question-item__modal-actions {
   text-align: right;
 }
 
-.place-item__actions button,
-.place-item__actions a {
+.question-item__actions button,
+.question-item__actions a {
   margin: 0.5rem;
 }
 
@@ -57,7 +57,7 @@
 }
 
 @media (min-width: 768px) {
-  .place-item__image {
+  .question-item__image {
     height: 20rem;
   } 
 }
